--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha spec/**"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
+    "start": "node <name_of_mainjs_file>"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,12 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "deep-eql": "^4.0.1",
+    "express": "^4.18.1",
     "mocha": "^10.0.0",
     "standard": "^17.0.0"
+  },
+  "devDependencies": {
+    "jest": "^28.1.1",
+    "supertest": "^6.2.3"
   }
 }
